# restframework-practice

./: .python-version  pyproject.toml
app/: authtoken_토큰 생성.ipynb  db.sqlite3  lexers and styles.ipynb  serializer.ipynb
app/.ipynb_checkpoints/: authtoken_토큰 생성-checkpoint.ipynb  lexers and styles-checkpoint.ipynb  serializer-checkpoint.ipynb
app/config/: settings.py  urls.py
app/members/: apis.py  models.py  serializers.py  tests.py  urls.py
app/members/migrations/: 0001_initial.py
app/snippets/: models.py  serializers.py  tests.py  urls.py  views.py
app/snippets/apis/: __init__.py  api_view.py  generic.py  mixins.py  viewsets.py
app/snippets/migrations/: 0001_initial.py
